fixing alignment mistakes

--- a/styles/style.css
+++ b/styles/style.css
@@ -118,19 +118,17 @@ span,
 }
 
 .about {
-  text-align: center;
-  margin-top: 60px;
   padding-bottom: 60px;
+  margin: 60px 0 0 160px;
 }
 
 .about p {
-  font-size: 3em;
+  font-size: 2.5em;
   margin: 30px 0 30px 0;
-  color: var(--var-main-color);
 }
 
 .about span {
-  font-size: 2.5em;
+  color: var(--var-main-color);
 }
 
 .quote {
